--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "Lakremon/totalFaker",
+    "name": "Lakremon/total-faker",
     "type": "library",
-    "description": "totalFaker is PHP program complex to take realistic data about peoples, Companies etc. to test your application.",
+    "description": "total-faker is PHP program complex to take realistic data about peoples, Companies etc. to test your application.",
     "keywords": [
         "php",
         "faker",
         "test",
         "random"
     ],
-    "homepage": "https://github.com/Lakremon/totalFaker",
+    "homepage": "https://github.com/Lakremon/total-faker",
     "authors": [
         {
             "name": "Lakremon",
@@ -17,10 +17,29 @@
             "role": "Developer"
         }
     ],
+    "config": {
+        "bin-dir": "bin"
+    },
     "require": {
-        "php": "^5.4.0"
+        "php": "^7.2.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "OpenApi\\": "src"
+        },
+        "files": [
+            "src/functions.php"
+        ]
     },
     "require-dev": {
         "phpunit/phpunit": "^5.2.1"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "OpenApiTests\\": "tests/"
+        }
+    },
+    "scripts": {
+        "test": "phpunit && phpcs -p --extensions=php --standard=PSR2 --error-severity=1 --warning-severity=0 ./src ./tests"
     }
 }
