Valid name for composer package

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Lakremon/total-faker",
+    "name": "lakremon/total-faker",
     "type": "library",
     "description": "total-faker is PHP program complex to take realistic data about peoples, Companies etc. to test your application.",
     "keywords": [
