--- a/composer.json
+++ b/composer.json
@@ -26,14 +26,11 @@
     },
     "autoload": {
         "psr-4": {
-            "OpenApi\\": "src"
-        },
-        "files": [
-            "src/functions.php"
-        ]
+            "TotalFaker\\": "src/"
+        }
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.2.1"
+        "phpunit/phpunit": "^7.0.0"
     },
     "autoload-dev": {
         "psr-4": {
